<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.HomeFragment"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.airqualityproject.presenter.AirViewModel" />
    </data>



    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/frag_home">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:padding="16dp"
            android:hint="Search a city or station"/>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_no_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="The search returned 0 results"
            android:textStyle="italic"
            android:gravity="center"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:listitem="@layout/lazy_city_adapter"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</layout>
